# robot_slam

./: CMakeLists.txt  README.md  basic.launch  billChildScript.lua  describe8_global_planner.xml  kinectChildScriopt.lua  laserScannerChildScript.lua  laserScannerProximityChildScript.lua  package.xml  robotChildScript.lua  run4_describe8.bash  run_leading.bash  run_planning.bash  run_slam.bash  run_slam_kinect.bash  test1.ttt  test2.ttt  test3_kinect.ttt
include/: describe8.h
launch/: describe8+leading.launch  leading.launch  planning.launch  slam+kinect.launch  slam.launch
params/bill/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
params/planning/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml
rviz/: slam.rviz
src/: bill_controller_node.cpp  describe8.cpp
