<package format="2">
  <name>robot_slam</name>
  <description>A simple SLAM demo</description>
  <maintainer email="zchenpds@gmail.com">Zhuo</maintainer>
  <version>0.0.1</version>
  <author>Zhuo Chen</author>
  <license>BSD2</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rosmsg</depend>
  <depend>move_base</depend>
  <depend>gmapping</depend>
  <depend>rviz</depend>
  <depend>tf</depend>
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <depend>rgbdslam</depend>
  <depend>nav_core</depend>
  <depend>base_local_planner</depend>
  <depend>pluginlib</depend>
  <depend>costmap_2d</depend>
  <export>
    <nav_core plugin="${prefix}/describe8_global_planner.xml" />
  </export>
</package>
